--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
 <!--Navigation bar-->
 <div class="w3-row">
   <div class="w3-col m2 w3-bar-block w3-center " style="">
-    <h3 class="w3-bar-item"><img src="pics/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
+    <h3 class="w3-bar-item"><img src="assets/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
     <div class="">
     <!--  <a href="index.html" class="w3-bar-item w3-button">Home</a>-->
     </div>
@@ -31,7 +31,7 @@
         <!-- pic 1-->
         <div class="w3-col m4">
           <div class="w3-container">
-            <img src="pics/photos/chewy.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+            <img src="assets/photos/chewy.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
             <div class=" w3-card-4">
               <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('chewyBalls').style.display='block'">Chewy Balls</button>
             </div>
@@ -45,7 +45,7 @@
                 </header>
                 <div class="w3-row" style="margin:20px">
                   <div class="w3-col m8  w3-padding-large">
-                      <img src="pics/photos/chewy.png" class="w3-image w3-card" alt="">
+                      <img src="assets/photos/chewy.png" class="w3-image w3-card" alt="">
                   </div>
                   <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                 Our Chewy Balls are made out of glutinous flour, desiccated coconut, and ube condensed.
@@ -64,7 +64,7 @@
          <!--- pic 2-->
          <div class="w3-col m4 ">
            <div class="w3-container">
-             <img src="pics/photos/crepe.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+             <img src="assets/photos/crepe.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
              <div class=" w3-card-4">
                <button class="w3-btn w3-block w3-green  w3-hover-yellow" onclick="document.getElementById('crepeCake').style.display='block'">Crepe Cake</button>
              </div>
@@ -78,7 +78,7 @@
                  </header>
                  <div class="w3-row" style="margin:20px">
                    <div class="w3-col m8  w3-padding-large">
-                       <img src="pics/photos/crepe.png" class="w3-image" alt="">
+                       <img src="assets/photos/crepe.png" class="w3-image" alt="">
                    </div>
                    <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                      Crepe Cake is a thin, flat cake made out of ripe langka or jackfruit meat, all-purpose flour, white sugar, baking powder, eggs, evaporada, and margarine.
@@ -96,7 +96,7 @@
           <!--pic 3-->
           <div class="w3-col m4 ">
             <div class="w3-container">
-              <img src="pics/photos/davegie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+              <img src="assets/photos/davegie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
               <div class=" w3-card-4">
                 <button class="w3-btn w3-block w3-green  w3-hover-yellow" onclick="document.getElementById('davegeRoll').style.display='block'">Da'Vegie Roll</button>
               </div>
@@ -110,7 +110,7 @@
                   </header>
                   <div class="w3-row" style="margin:20px">
                     <div class="w3-col m8  w3-padding-large">
-                        <img src="pics/photos/davegie.png" class="w3-image" alt="">
+                        <img src="assets/photos/davegie.png" class="w3-image" alt="">
                     </div>
                     <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                       Da'Vegie Roll is made out of unripe jackfruit, carrots, sweet potatoes, garlic, and onions. Seasoning, wrapper, salt, and pepper.
@@ -127,7 +127,7 @@
           <!--pic 4-->
           <div class="w3-col m4 " style="margin-top:20px">
             <div class="w3-container">
-              <img src="pics/photos/breadpie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+              <img src="assets/photos/breadpie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
               <div class=" w3-card-4">
                 <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('langkaBreadPie').style.display='block'">Langka Bread Pie</button>
               </div>
@@ -141,11 +141,11 @@
                   </header>
                   <div class="w3-row" style="margin:20px">
                     <div class="w3-col m8  w3-padding-large">
-                        <img src="pics/photos/breadpie.png" class="w3-image" alt="">
+                        <img src="assets/photos/breadpie.png" class="w3-image" alt="">
                     </div><br>
                     <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                         <!--type description here-->
-                        
+
                     </div>
                   </div>
                   <div class="w3-container w3-padding " style="margin-top:20px">
@@ -158,7 +158,7 @@
           <!--pic 5-->
           <div class="w3-col m4 " style="margin-top:20px">
             <div class="w3-container">
-              <img src="pics/photos/burger.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+              <img src="assets/photos/burger.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
               <div class=" w3-card-4">
                 <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('langkaBurger').style.display='block'">Langka Burger</button>
               </div>
@@ -172,7 +172,7 @@
                   </header>
                   <div class="w3-row" style="margin:20px">
                     <div class="w3-col m8  w3-padding-large">
-                        <img src="pics/photos/burger.png" class="w3-image" alt="">
+                        <img src="assets/photos/burger.png" class="w3-image" alt="">
                     </div>
                     <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                       Langka Burger is a healthy meatless sandwich made out of unripe jackfruit meat, onions, garlic, flour, knorr cubes, salt, eggs, pepper, buns, ketchup, mayonnaise, and oil.
@@ -191,7 +191,7 @@
            <!--pic 6-->
            <div class="w3-col m4 " style="margin-top:20px">
              <div class="w3-container">
-               <img src="pics/photos/puto.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+               <img src="assets/photos/puto.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
                <div class=" w3-card-4">
                  <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('putoDeLangka').style.display='block'">Puto de Langka</button>
                </div>
@@ -205,7 +205,7 @@
                    </header>
                    <div class="w3-row" style="margin:20px">
                      <div class="w3-col m8  w3-padding-large">
-                         <img src="pics/photos/puto.png" class="w3-image" alt="">
+                         <img src="assets/photos/puto.png" class="w3-image" alt="">
                      </div>
                      <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                       The Puto de Langka is a soft, bite-size piece of steamed cake made out of ripe jackfruit, flour, white sugar, eggs, oil, baking powder, water, salt, and vanilla.
@@ -221,7 +221,7 @@
             <!--pic 7-->
             <div class="w3-col m4 " style="margin-top:20px">
               <div class="w3-container">
-                <img src="pics/photos/shakee.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+                <img src="assets/photos/shakee.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
                 <div class=" w3-card-4">
                   <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('shakeeDelight').style.display='block'">Shakee Delight</button>
                 </div>
@@ -235,7 +235,7 @@
                     </header>
                     <div class="w3-row" style="margin:20px">
                       <div class="w3-col m8  w3-padding-large">
-                          <img src="pics/photos/shakee.png" class="w3-image" alt="">
+                          <img src="assets/photos/shakee.png" class="w3-image" alt="">
                       </div>
                       <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                         Our refreshing Shakee Delight is made out of ripe jackfruit, evaporated milk, condensed milk, and crushed ice.
@@ -254,7 +254,7 @@
             <!--pic 8-->
             <div class="w3-col m4 " style="margin-top:20px">
               <div class="w3-container">
-                <img src="pics/photos/smoothie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+                <img src="assets/photos/smoothie.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
                 <div class=" w3-card-4">
                   <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('smothie').style.display='block'">Smoothie</button>
                 </div>
@@ -268,7 +268,7 @@
                     </header>
                     <div class="w3-row" style="margin:20px">
                       <div class="w3-col m8  w3-padding-large">
-                          <img src="pics/photos/smoothie.png" class="w3-image" alt="">
+                          <img src="assets/photos/smoothie.png" class="w3-image" alt="">
                       </div>
                       <div class="w3-col m4 w3-padding-large" style="font-size:20px">
                         Our Smoothie is a nutritious drink made out of ripe jackfruit, water, sugar, and evaporated milk.
@@ -286,7 +286,7 @@
             <!--pic 9-->
             <div class="w3-col m4 " style="margin-top:20px">
               <div class="w3-container">
-                <img src="pics/photos/trianggulo.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+                <img src="assets/photos/trianggulo.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
                 <div class=" w3-card-4">
                   <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('springTrianggulo').style.display='block'">Spring Trianggulo</button>
                 </div>
@@ -300,7 +300,7 @@
                     </header>
                     <div class="w3-row" style="margin:20px">
                       <div class="w3-col m8 w3-padding-large">
-                          <img src="pics/photos/trianggulo.png" class="w3-image" alt="">
+                          <img src="assets/photos/trianggulo.png" class="w3-image" alt="">
                       </div>
                       <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                         Spring trianggulo is triangle-shaped turon made out of ripe jackfruit, sugar, oil, wrapper, and sesame seed.
@@ -318,7 +318,7 @@
             <!--pic 10-->
             <div class="w3-col m4 " style="margin-top:20px">
               <div class="w3-container">
-                <img src="pics/photos/ppang.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
+                <img src="assets/photos/ppang.png" class="w3-image w3-border w3-hover-border-green w3-hover-opacity" alt="">
                 <div class=" w3-card-4">
                   <button class="w3-btn w3-block w3-green w3-hover-yellow" onclick="document.getElementById('zeppole').style.display='block'">Zeppole Ppang</button>
                 </div>
@@ -332,7 +332,7 @@
                     </header>
                     <div class="w3-row" style="margin:20px">
                       <div class="w3-col m8  w3-padding-large">
-                          <img src="pics/photos/ppang.png" class="w3-image" alt="">
+                          <img src="assets/photos/ppang.png" class="w3-image" alt="">
                       </div>
                       <div class="w3-col m4  w3-padding-large" style="font-size:20px">
                         Zeppole Ppang is a small, circle-shaped fried dough with langka filling made out of ripe langka, flour, baking powder, evaporated milk, vanilla, and sugar.
