--- a/about_us.html
+++ b/about_us.html
@@ -7,7 +7,7 @@
 
 <div class="w3-row">
   <div class="w3-col m2 w3-bar-block w3-center" style="">
-    <h3 class="w3-bar-item"><img src="pics/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
+    <h3 class="w3-bar-item"><img src="assets/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
     <!--<a href="index.html" class="w3-bar-item w3-button">Home</a>-->
     <a href="products.html" class="w3-bar-item w3-button">Products</a>
     <a href="mission.html" class="w3-bar-item w3-button">Mission</a>
@@ -25,7 +25,7 @@
   <a href="contact_us.html" class="w3-bar-item w3-button w3-hover-red">Contact Us</a>
 </div>
 <div class="w3-col m10 w3-card-4 w3-center w3-animate-right" style="margin-top:10px">
-  <img src="pics/pics/about_us.jpg" alt="" style="width:70%" class="w3-image w3-middle">
+  <img src="assets/pics/about_us.jpg" alt="" style="width:70%" class="w3-image w3-middle">
 </div>
 </div>
 
