--- a/contact_us.html
+++ b/contact_us.html
@@ -7,7 +7,7 @@
 
 <div class="w3-row">
   <div class="w3-col m2 w3-bar-block w3-center" style="">
-    <h3 class="w3-bar-item"><img src="pics/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
+    <h3 class="w3-bar-item"><img src="assets/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
     <a href="products.html" class="w3-bar-item w3-button">Products</a>
     <a href="mission.html" class="w3-bar-item w3-button w3-hover-red">Mission</a>
     <a href="vision.html" class="w3-bar-item w3-button w3-hover-red">Vision</a>
@@ -27,7 +27,7 @@
   <a href="#" class="w3-bar-item w3-button w3-hover-red w3-yellow">Contact Us</a>
 </div>
 <div class="w3-col m10 w3-card-4 w3-center w3-animate-right" style="margin-top:10px">
-  <img src="pics/pics/contact.jpg" alt="" style="width:60%;margi-bottom:10px" class="w3-image w3-middle">
+  <img src="assets/pics/contact.jpg" alt="" style="width:60%;margi-bottom:10px" class="w3-image w3-middle">
 </div>
 </div>
 
