--- a/objectives.html
+++ b/objectives.html
@@ -7,7 +7,7 @@
 
 <div class="w3-row">
   <div class="w3-col m2 w3-bar-block w3-center" style="">
-    <h3 class="w3-bar-item"><img src="pics/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
+    <h3 class="w3-bar-item"><img src="assets/snackieu_logo.png" alt="" style="width:200px" class="w3-image w3-middle"></h3>
   <!--  <a href="index.html" class="w3-bar-item w3-button ">Home</a>-->
     <a href="products.html" class="w3-bar-item w3-button">Products</a>
     <a href="vision.html" class="w3-bar-item w3-button ">Vision</a>
@@ -19,7 +19,7 @@
     <h2><b>Objectives</b></h2>
   </div>
   <div class="w3-col m10 w3-card-4 w3-center w3-animate-right" style="margin-top:10px">
-    <img src="pics/pics/snackieu_objectives.jpg" alt="" style="width:80%" class="w3-image w3-middle">
+    <img src="assets/pics/snackieu_objectives.jpg" alt="" style="width:80%" class="w3-image w3-middle">
   </div>
 
 </div>
